2005-05-17  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: (file_exist):
	* logview.c: (logview_save_prefs), (destroy), (logview_select_log),
	(logview_add_log), (logview_add_log_from_name),
	(logview_add_logs_from_names), (logview_remove_log), (main),
	(logview_create_window), (logview_find_log_from_name),
	(loglist_selection_changed), (loglist_find_logname),
	(loglist_select_log_from_name), (loglist_add_log),
	(loglist_remove_selected_log), (loglist_create), (CreateMainWin),
	(CloseLogMenu), (FileSelectResponse), (toggle_monitor),
	(logview_menus_set_state), (logview_set_window_title):
	* logview.h:
	* misc.c: (ShowQueuedErrMessages):
	* userprefs.c: (parse_syslog), (prefs_create_defaults),
	(prefs_free_loglist), (prefs_load), (prefs_save):
	* userprefs.h:

	Big UI change : add a sidebar that shows all the opened logs.
	This is a work in progress - monitoring does not work yet, and it
	might crash. As usual.

2005-03-02  Vincent Noel  <vnoel@cox.net>

	* logrtns.c (OpenLogFile): Free an allocated buffer. Fix bug
	#167969, patch by Joe Marcus Clarke.

2005-02-11  Vincent Noel  <vnoel@cox.net>

	* actions.c (apply_actions): Replace gnome_util_home_file by
	g_get_home_dir. Patch by Kristof Vansant, fixes #167109.

2005-01-24  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: included config.h if HAVE_CONFIG_H. Fix bug #164904
	(reported by Luca Ferretti)

2005-01-06  Vincent Noel  <vnoel@cox.net>

	* logrtns.c: Include locale.h

2005-01-04  Vincent Noel  <vnoel@cox.net>

	* info.c: (RepaintLogInfo): Mark string for translation. Fix bug #162584.

2005-01-04  Vincent Noel  <vnoel@cox.net>

	* log_repaint.c: (UpdateStatusArea):
	* logview-findbar.c: (logview_findbar_populate): Correct two
	typos, fix bug #162586.

005-01-04  Vincent Noel  <vnoel@cox.net>

	* logview.c: Correct a typo, fix bug #162587.

2004-12-30  Vincent Noel  <vnoel@cox.net>

	* info.c (RepaintLogInfo): Use ngettext, fixes bug #162584.

2004-12-09  Vincent Noel  <vnoel@cox.net>
