@@ -1,5 +1,11 @@
 2005-05-17  Vincent Noel  <vnoel@cox.net>
 
+	* logview.c: (logview_add_logs_from_names),
+	(loglist_selection_changed), (loglist_remove_selected_log),
+	(logview_menus_set_state): Remove debug spew.
+
+2005-05-17  Vincent Noel  <vnoel@cox.net>
+
 	* logrtns.c: (file_exist):
 	* logview.c: (logview_save_prefs), (destroy), (logview_select_log),
 	(logview_add_log), (logview_add_log_from_name),
